Adicionar campos para busca

--- a/front-end/pd-disk-catalog/src/index.css
+++ b/front-end/pd-disk-catalog/src/index.css
@@ -11,9 +11,15 @@ body {
 
 form {
   padding: 20px;
-  margin-top: 60px;
+  margin-top: 10px;
 }
 
 form button, form h5 {
   margin: 20px 0px;
+}
+
+.disk-search {
+  padding: 20px;
+  padding-bottom: 0px !important;
+  /* margin-top: 10px; */
 }
